# linapp-ws

./: .gitignore  CMakeLists.txt  README.md  setup_dev.sh
src/: main.cpp
